[workspace]
members = ["json"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["ethereum", "contract", "codegen"]
description = "An ethereum contract binding code generation framework for arbitrary programming languages"
documentation = "https://docs.rs/ethbind-rs"
readme = "README.md"
homepage = "https://github.com/AgoraCyber/ethbind-rs"
repository = "https://github.com/AgoraCyber/ethbind-rs"


[workspace.dependencies]

# serde support

serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

regex = "^1"

# error
thiserror = "^1"
anyhow = "^1"
