[package]
name = "ethbind"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "An ethereum contract binding code generation framework"
documentation = "https://docs.rs/ethbind"


[dependencies]
ethbind-json = { workspace = true }
ethbind-gen = { workspace = true }
ethbind-rust = { workspace = true }
ethbind-rust-macros = { workspace = true, optional = true }

[features]
macros = ["ethbind-rust-macros"]

[workspace]
members = ["json", "gen", "rust", "rust/macros", "./"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
keywords = ["ethereum", "contract", "codegen"]
description = "An ethereum contract binding code generation framework for arbitrary programming languages"
documentation = "https://docs.rs/ethbind-rs"
readme = "README.md"
homepage = "https://github.com/AgoraCyber/ethbind-rs"
repository = "https://github.com/AgoraCyber/ethbind-rs"


[workspace.dependencies]

# serde support

serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

regex = "^1"

# error
thiserror = "^1"
anyhow = "^1"


#sub crates
ethbind-json = { path = "./json", version = "^0.1" }
ethbind-gen = { path = "./gen", version = "^0.1" }
ethbind-rust = { path = "./rust", version = "^0.1" }
ethbind-rust-macros = { path = "./rust/macros", version = "^0.1" }

#rust code generation
quote = "^1"
proc-macro2 = "^1"


heck = "^0.4"
sha3 = "0.10.6"


dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.16"
