[package]
name = "ethbind-core"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
serde_with = "2.2.0"
serde = { version = "^1.0", features = ["derive"] }

regex = "^1"
log = "0.4.16"

thiserror = "^1"
anyhow = "^1"

sha3 = "0.10.6"

[dev-dependencies]
pretty_env_logger = "0.4.0"
