[package]
name = "ethbind-json"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }

regex = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pretty_env_logger = "0.4.0"
