[package]
name = "ethbind-rust-macros"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
syn = { version = "^1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"

ethbind-core = { path = "../core", version = "^0.1" }
ethbind-rust = { path = "../rust", version = "^0.1", optional = true }


[features]
default = ["ethbind-rust"]
serde = ["ethbind-rust", "ethbind-rust/serde"]
