[package]
name = "ethbind-gen-rust"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "The official rust language generator for ethbind"
documentation = "https://docs.rs/ethbind-gen-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethbind-gen = { workspace = true }
ethbind-json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
