[package]
name = "ethbind-rust"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "The official rust language generator for ethbind"
documentation = "https://docs.rs/ethbind-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethbind-gen = { workspace = true }
ethbind-json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
sha3 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
pretty_env_logger = { workspace = true }
